// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transition-delay: 0.5s: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-delay: 0.5s: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-delay": {
      "setterCode": "transitionDelay(500.0)",
      "valueCode": "500.0",
    },
  },
}
`;

exports[`transition-delay: 0s: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-delay: 0s: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-delay": {
      "setterCode": "transitionDelay(0.0)",
      "valueCode": "0.0",
    },
  },
}
`;

exports[`transition-delay: 2s, 4ms: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transition-delay",
        "important": false,
        "prop": "transitionDelay",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "2s, 4ms",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`2s, 4ms\` is not supported for \`transition-delay\` (supported values are: \`number of seconds\`|\`milliseconds\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transition-delay: 2s, 4ms: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transition-delay",
        "important": false,
        "prop": "transitionDelay",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "2s, 4ms",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`2s, 4ms\` is not supported for \`transition-delay\` (supported values are: \`number of seconds\`|\`milliseconds\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transition-delay: 200ms: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-delay: 200ms: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-delay": {
      "setterCode": "transitionDelay(200.0)",
      "valueCode": "200.0",
    },
  },
}
`;

exports[`transition-duration: 0.3s: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-duration: 0.3s: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-duration": {
      "setterCode": "transitionDuration(300.0)",
      "valueCode": "300.0",
    },
  },
}
`;

exports[`transition-duration: 1s: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-duration: 1s: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-duration": {
      "setterCode": "transitionDuration(1000.0)",
      "valueCode": "1000.0",
    },
  },
}
`;

exports[`transition-duration: 150ms: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-duration: 150ms: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-duration": {
      "setterCode": "transitionDuration(150.0)",
      "valueCode": "150.0",
    },
  },
}
`;

exports[`transition-property: all: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: all: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "All"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "All")",
    },
  },
}
`;

exports[`transition-property: background-color: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: background-color: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "BackgroundColor"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "BackgroundColor")",
    },
  },
}
`;

exports[`transition-property: border-bottom-color: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-bottom-color: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "BorderBottomColor"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "BorderBottomColor")",
    },
  },
}
`;

exports[`transition-property: border-color: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-color: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "BorderColor"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "BorderColor")",
    },
  },
}
`;

exports[`transition-property: border-left-color: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-left-color: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "BorderLeftColor"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "BorderLeftColor")",
    },
  },
}
`;

exports[`transition-property: border-right-color: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-right-color: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "BorderRightColor"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "BorderRightColor")",
    },
  },
}
`;

exports[`transition-property: border-top-color: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-top-color: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "BorderTopColor"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "BorderTopColor")",
    },
  },
}
`;

exports[`transition-property: bottom: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: bottom: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Bottom"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Bottom")",
    },
  },
}
`;

exports[`transition-property: height: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: height: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Height"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Height")",
    },
  },
}
`;

exports[`transition-property: left: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: left: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Left"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Left")",
    },
  },
}
`;

exports[`transition-property: margin: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Margin"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Margin")",
    },
  },
}
`;

exports[`transition-property: margin-bottom: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin-bottom: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "MarginBottom"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "MarginBottom")",
    },
  },
}
`;

exports[`transition-property: margin-left, margin-top: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin-left, margin-top: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty([UTSCPP.propertyAccess(UniNativeTransitionProperty, "::" , "MarginLeft"),UTSCPP.propertyAccess(UniNativeTransitionProperty, "::" , "MarginTop")])",
      "valueCode": "[UTSCPP.propertyAccess(UniNativeTransitionProperty, "::" , "MarginLeft"),UTSCPP.propertyAccess(UniNativeTransitionProperty, "::" , "MarginTop")]",
    },
  },
}
`;

exports[`transition-property: margin-left: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin-left: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "MarginLeft"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "MarginLeft")",
    },
  },
}
`;

exports[`transition-property: margin-right: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin-right: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "MarginRight"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "MarginRight")",
    },
  },
}
`;

exports[`transition-property: margin-top: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin-top: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "MarginTop"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "MarginTop")",
    },
  },
}
`;

exports[`transition-property: none: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: none: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "None")",
    },
  },
}
`;

exports[`transition-property: opacity: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: opacity: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Opacity"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Opacity")",
    },
  },
}
`;

exports[`transition-property: padding: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Padding"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Padding")",
    },
  },
}
`;

exports[`transition-property: padding-bottom: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding-bottom: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "PaddingBottom"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "PaddingBottom")",
    },
  },
}
`;

exports[`transition-property: padding-left: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding-left: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "PaddingLeft"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "PaddingLeft")",
    },
  },
}
`;

exports[`transition-property: padding-right: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding-right: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "PaddingRight"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "PaddingRight")",
    },
  },
}
`;

exports[`transition-property: padding-top: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding-top: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "PaddingTop"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "PaddingTop")",
    },
  },
}
`;

exports[`transition-property: right: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: right: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Right"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Right")",
    },
  },
}
`;

exports[`transition-property: top: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: top: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Top"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Top")",
    },
  },
}
`;

exports[`transition-property: transform: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: transform: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Transform"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Transform")",
    },
  },
}
`;

exports[`transition-property: width: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: width: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transition-property": {
      "setterCode": "transitionProperty(UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Width"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeTransitionProperty, "::", "Width")",
    },
  },
}
`;

exports[`transition-timing-function: cubic-bezier: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transition-timing-function",
        "important": false,
        "prop": "transitionTimingFunction",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "cubic-bezier",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`cubic-bezier\` is not supported for \`transition-timing-function\` (supported values are: \`linear\`|\`ease\`|\`ease-in\`|\`ease-out\`|\`ease-in-out\`|\`cubic-bezier(n,n,n,n)\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transition-timing-function: cubic-bezier: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transition-timing-function",
        "important": false,
        "prop": "transitionTimingFunction",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "cubic-bezier",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`cubic-bezier\` is not supported for \`transition-timing-function\` (supported values are: \`linear\`|\`ease\`|\`ease-in\`|\`ease-out\`|\`ease-in-out\`|\`cubic-bezier(n,n,n,n)\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transition-timing-function: ease: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: ease: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transition-timing-function",
        "important": false,
        "prop": "transitionTimingFunction",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "ease",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Property 'transition-timing-function' has invalid value: 'ease'",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transition-timing-function: ease-in: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: ease-in: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transition-timing-function",
        "important": false,
        "prop": "transitionTimingFunction",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "ease-in",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Property 'transition-timing-function' has invalid value: 'ease-in'",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transition-timing-function: ease-in-out: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: ease-in-out: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transition-timing-function",
        "important": false,
        "prop": "transitionTimingFunction",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "ease-in-out",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Property 'transition-timing-function' has invalid value: 'ease-in-out'",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transition-timing-function: ease-out: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: ease-out: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transition-timing-function",
        "important": false,
        "prop": "transitionTimingFunction",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "ease-out",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Property 'transition-timing-function' has invalid value: 'ease-out'",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transition-timing-function: linear: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: linear: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transition-timing-function",
        "important": false,
        "prop": "transitionTimingFunction",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "linear",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Property 'transition-timing-function' has invalid value: 'linear'",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;
